Correct form input vertical spacing on mobile/tablet.

--- a/styleguide/source/assets/scss/02-molecules/_subscribe-promo.scss
+++ b/styleguide/source/assets/scss/02-molecules/_subscribe-promo.scss
@@ -110,7 +110,10 @@
       }
 
       .ama__form-group {
-        flex: 1;
+        flex: 0 0 auto;
+        @include breakpoint($bp-large){
+          flex: 1;
+        }
       }
 
       .ama__button {
